--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,27 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <style>
+      *{
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+      }
+
+      body {
+        font-family: 'Josefin Sans';
+        background-color: #FFFAFB;
+      }
+
+      ::-webkit-scrollbar {
+        width: 0px;
+      }
+
+      a{
+        text-decoration: none;
+        color: inherit;
+      }
+    </style>
     <title>React App</title>
   </head>
   <body>
