--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
         color: inherit;
       }
     </style>
-    <title>React App</title>
+    <title>Fast Fitness</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
